--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <nav class="navbar navbar-expand-lg sticky-top text-light">
         <a href="#" class="navbar-brand text-light fw-bold ms-5 mt-1" id="logoText">LOGO HERE</a>
-        <button class="navbar-toggler bg-info me-2 text-primary" data-bs-toggle="collapse" data-bs-target="#collapsenav1">
+        <button class="navbar-toggler bg-info me-2 text-primary navbar-light" data-bs-toggle="collapse" data-bs-target="#collapsenav1">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse text-center" id="collapsenav1">
