--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
     <header class="d-flex flex-md-nowrap align-items-center justify-content-around text-light">
         <h6 class="fw-bold my-2">AAA rolled out Partner Events. <a href="#" id="A1" class="text-decoration-none">Check Now!</a></h6>
-        <h6 class="fw-bold my-2" id="H4-2">Any Questions? Call Us Now (+91) XXX-XXXX</h6>
-        <a href="#" id="A2" class="fw-bold text-decoration-none text-light my-2">Contact Support</a>
+        <h6 class="fw-bold my-2">Any Questions? Call Us Now (+91) XXX-XXXX</h6>
+        <a href="#" class="fw-bold text-decoration-none text-light my-2">Contact Support</a>
     </header>
-    <nav class="navbar navbar-expand-lg sticky-top text-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a href="#" class="navbar-brand text-light fw-bold ms-5 mt-1" id="logoText">LOGO HERE</a>
         <button class="navbar-toggler bg-info me-2 text-primary navbar-light" data-bs-toggle="collapse" data-bs-target="#collapsenav1">
             <span class="navbar-toggler-icon"></span>
@@ -83,39 +83,41 @@
                 </div>
             </div>
             <div class="col-lg-9 shadow" id="H-D">
-                <div class="row" style="height: 78%;">
+                <div class="row">
                     <div class="col-md-6">
                         <img id="image1" class="mt-5" src="images/arrow.jpg" alt="arrow"/>
                         <h2 class="mt-3 ms-5">Heading One</h2>
                         <hr id="hr2" class="bg-secodary mt-4">
-                        <p class="mt-4 ms-5">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+                        <p class="mt-4 ms-5 me-5">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
                         sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
                         sed diam voluptua. At vero eos et 
                         </p>
                         <button id="Cpbtn" class="text-light mt-5">Compare Plans</button>
                     </div>
-                    <div class="col-md-6 d-flex align-items-end">
-                        <img class="w-100" id="image2" src="images/Upload-pana-removebg-preview.png" alt="Upload-pana"/>
+                    <div class="col-md-6 d-flex align-items-end mb-2">
+                        <img class="w-100 h-50" id="image2" src="images/Upload-pana-removebg-preview.png" alt="Upload-pana"/>
+                    </div>
+                    <div class="mt-5 ms-5">
+                        <h4 class="text-dark mt-5 mb-4 w-75">Unlimited <a href="#">Add-Ons</a> , <a href="#">Integrations</a>, and <a href="">Application</a> scan be hosted along with QuickBooks</h4>
                     </div>
                 </div>
-                <div class="row mx-5" style="margin-top: 60px;">
-                    <div class="col">
-                        <h4 class="text-dark">Unlimited <a href="#">Add-Ons</a> , <a href="#">Integrations</a>, and <a href="">Application</a> scan be hosted along with QuickBooks</h4>
-                    </div>
-                </div>
+                
+                <!-- <div class="row mx-5 mt-3">
+                    <h4 class="text-dark">Unlimited <a href="#">Add-Ons</a> , <a href="#">Integrations</a>, and <a href="">Application</a> scan be hosted along with QuickBooks</h4>
+                </div> -->
             </div>
         </div>
     </div>
     <div class="container shadow w-75 bg-white" id="Q-D-text">
         <div class="row h-100">
-            <div class="col-md-1 border" id="Orange-color-D"></div>
-            <div class="col-md-7 h-100" id="QD-Heading">
+            <div class="col-lg-1 border" id="Orange-color-D"></div>
+            <div class="col-lg-7 h-100" id="QD-Heading">
                 <h1 class="mt-5 pt-3 ms-5">Have Questions?</h1>
                 <h2 class="ms-5">Ask Our Solutions Consultant</h2>
                 <hr id="hr3" class="bg-secondary ms-5">
-                <h3 class="mx-5">Call Us +1 (XXX) XXX-XXXX</h3>
+                <h3 class="mx-5 mb-5">Call Us +1 (XXX) XXX-XXXX</h3>
             </div>
-            <div class="col-md-4 d-flex justify-content-center align-items-center" id="QD-btn-D">
+            <div class="col-lg-4 d-flex justify-content-center align-items-center" id="QD-btn-D">
                 <button id="cbbtn" class="bg-light">Get a Call Back</button>
             </div>
         </div>
